# RustAI

./: .gitignore  Cargo.toml  README.md
python/: speech_to_text.py
python/media/: question.m4a
src/: lib.rs  main.rs
src/rust_ai/: audio.rs  chat_completions.rs  mod.rs
